-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.825 2010-11-19 03:53:52 guru Exp $
-----------------------------------------------------------------------------------------

2010-11-18	pwessel
	* gmt_io.c:		When ASCII mode, also need to save/restore any netcdf i/o settings.
	* gmt_map.c:		We have a safety valve for preventing a painful slow search
				around the map perimeter.  The search is appropriate for maps
				but not for mapproject results.  The limit was for 200 inch
				wide maps == 14400p.  A user ran pscoast with 14401p and was
				caught.  Now check for 400 inch and also check current page
				size (PAPER_MEDIA). If map width vastly outsizes the paper
				size then it is probably a projection job.
	* pslegend.c:		Need to keep the original -R around since it may be -R....r
	* xyz2grd.c:		Failed if -Evalue was given and the ESRI grid already had a
				nodata_value line.  Now will process this line, if present.
				The value given on the command line will override any setting
				found in the file.  Also made string-checks case-insensitive.
	* gmt_support.c:	GMT_inonout_sphpol_count failed to detect crossings if a
				polygon had vertical line-segments with same longitude as
				the point we were testing.

2010-11-16	pwessel
	* gmt_plot.c:		Tried to free an unallocated array in GMT_draw_custom_symbol
	
2010-11-15	pwessel
	* grdproject.c:		Now assign proper x/y units.

2010-11-12	pwessel
	* spotter/rotconverter.c:	Forgot to skip args when -N or -S was used.

2010-11-10	pwessel
	* nearneighbor.c:	Changed default to a more reasonable -N4/2.
	
2010-11-05	jluis
	* meca/utilmeca.c:	Fix bug affecting the plot of P & T axis

2010-11-05	pwessel
	* blockmean.txt:	Referred to unknown -D option.

2010-11-04	remko
	* meca/*.txt:		Replaced .IP with .TP
	* configure.ac:		Updated to version 4.5.6

-----------------------------------------------------------------------------------------
2010-11-01	pwessel